[package]
name = "rustalkt"
version = "0.2.0"
authors = ["Igor <igor@devfire.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["full"] }
socket2 = "0.3"
clap = "2.33"
thiserror = "1.0.37"
anyhow = "1.0.66"
