[package]
name = "rustalkt"
version = "0.2.0"
authors = ["Igor <igor@devfire.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.23.0", features = ["full"] }
socket2 = "0.4.7"
clap = { version = "4.0.22", features = ["derive"] }
thiserror = "1.0.37"
anyhow = "1.0.66"
